[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parameters = { path = "../parameters"}
memmap = "0.7.0"
libc = "0.2.153"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
anyhow = "1.0.44"