[package]
name = "one_instance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parameters = { path = "../parameters"}
wasmtime = "18.0.2" # à supprimer car c'est le programme indépendant qui l'utilise seulement
wasmtime-wasi = "18.0.2"
wasmtime-runtime = "18.0.2"
wasi-common = "18.0.2"
anyhow = "1.0.44"